--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#060B21" />
     <meta name="description" content="Modern React Website" />
-    <title>Fredrik Dokken</title>
+    <title>I'm Fredrik</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
